# ktoblzcheck-svn

branches/a/ktoblzcheck/: Makefile.am  configure.in
branches/a/ktoblzcheck/src/bankdata/: bankdata.txt
branches/a/ktoblzcheck/src/lib/: ktoblzcheck.cc
tags/b/ktoblzcheck/: configure
tags/b/ktoblzcheck/src/include/: ktoblzcheck.hh
tags/b/ktoblzcheck/src/lib/: Makefile.am
tags/ktoblzcheck-0_2/ktoblzcheck/: .cvsignore  ChangeLog
tags/ktoblzcheck-0_2/ktoblzcheck/src/.deps/: ktoblzcheck.P
tags/ktoblzcheck-0_2/ktoblzcheck/src/bankdata/: Makefile.am  bankdata.txt
tags/ktoblzcheck-0_2/ktoblzcheck/src/include/: ktoblzcheck.h  ktoblzcheck.hh
tags/ktoblzcheck-0_2/ktoblzcheck/src/lib/: Makefile.am
tags/ktoblzcheck-0_3/ktoblzcheck/: .tm_project.cache  AUTHORS  Makefile.am  README  acinclude.m4
tags/ktoblzcheck-0_3/ktoblzcheck/src/: .kdbgrc.gopenhbci
tags/ktoblzcheck-0_3/ktoblzcheck/src/bankdata/: transform.sh
tags/ktoblzcheck-0_3/ktoblzcheck/src/include/: ktoblzcheck.h
tags/ktoblzcheck-0_3/ktoblzcheck/src/lib/: .cvsignore  Makefile.am  algorithms.cc  ktoblzcheck.cc
tags/ktoblzcheck-0_4/ktoblzcheck/: ChangeLog  Doxyfile
tags/ktoblzcheck-0_4/ktoblzcheck/src/bankdata/: bankdata.txt
tags/ktoblzcheck-0_4/ktoblzcheck/src/include/: Makefile.am
tags/ktoblzcheck-0_4/ktoblzcheck/src/lib/: algorithms.h  ktoblzcheck.cc
tags/ktoblzcheck-0_5/ktoblzcheck/: configure.in
tags/ktoblzcheck-0_5/ktoblzcheck/doc/: ktoblzcheck.1
tags/ktoblzcheck-0_5/ktoblzcheck/src/: Makefile.am
tags/ktoblzcheck-0_5/ktoblzcheck/src/bankdata/: bankdata.txt
tags/ktoblzcheck-0_5/ktoblzcheck/src/include/: Makefile.am
tags/ktoblzcheck-0_5/ktoblzcheck/src/lib/: accnum.cc
tags/ktoblzcheck-0_6/ktoblzcheck/: AUTHORS  ChangeLog  Makefile.am  acconfig.h  acinclude.m4  autogen.sh
tags/ktoblzcheck-0_6/ktoblzcheck/doc/: Makefile.am
tags/ktoblzcheck-0_6/ktoblzcheck/src/bankdata/: bundesbank.sed
tags/ktoblzcheck-0_6/ktoblzcheck/src/include/: ktoblzcheck.h
tags/ktoblzcheck-0_7/ktoblzcheck/: .cvsignore  README.WIN32  autogen.sh  ktoblzcheck.spec.in
tags/ktoblzcheck-0_7/ktoblzcheck/src/bankdata/: Makefile.am  bankdata.txt
tags/ktoblzcheck-0_7/ktoblzcheck/src/lib/: Makefile.am  algorithms.h
tags/ktoblzcheck-1_0/ktoblzcheck/: configure.in  ktoblzcheck.vcproj
tags/ktoblzcheck-1_0/ktoblzcheck/src/bankdata/: Makefile.am  bankdata.txt
tags/ktoblzcheck-1_0/ktoblzcheck/src/lib/: .cvsignore
tags/ktoblzcheck-1_1/ktoblzcheck/: .cvsignore  ChangeLog  INSTALL.WIN32  README  README.WIN32  ktoblzcheck.iss.in
tags/ktoblzcheck-1_1/ktoblzcheck/src/bankdata/: bankdata.txt  bundesbank.sed
tags/ktoblzcheck-1_1/ktoblzcheck/src/lib/: accnum.cc  ktoblzcheck.cc
tags/ktoblzcheck-1_10/ktoblzcheck/: ChangeLog  Makefile.am  README  README.WIN32  ktoblzcheck.iss.in
tags/ktoblzcheck-1_10/ktoblzcheck/doc/: Makefile.am
tags/ktoblzcheck-1_10/ktoblzcheck/src/include/: .cvsignore  ktoblzcheck.h.in
tags/ktoblzcheck-1_10/ktoblzcheck/src/lib/: Makefile.am  algorithms.cc  iban.cc  ktoblzcheck.cc  methods.cc
tags/ktoblzcheck-1_2/ktoblzcheck/: ChangeLog  Makefile.am  NEWS  README  ktoblzcheck.spec.in
tags/ktoblzcheck-1_2/ktoblzcheck/macros/: Makefile.am  ac_c_long_long.m4
tags/ktoblzcheck-1_2/ktoblzcheck/src/include/: iban.h
tags/ktoblzcheck-1_2/ktoblzcheck/src/lib/: Makefile.am  accnum.cc  algorithms.cc
tags/ktoblzcheck-1_5/ktoblzcheck/: .cvsignore  ChangeLog
tags/ktoblzcheck-1_5/ktoblzcheck/src/bankdata/: bankdata.txt  bundesbank.sed.in  online_update.pl.in
tags/ktoblzcheck-1_5/ktoblzcheck/src/python/: Makefile.am
tags/ktoblzcheck-1_6/ktoblzcheck/: Makefile.am
tags/ktoblzcheck-1_6/ktoblzcheck/doc/: .cvsignore
tags/ktoblzcheck-1_6/ktoblzcheck/src/lib/: methods.cc  ressource.rc.in
tags/ktoblzcheck-1_7/ktoblzcheck/: ChangeLog  Makefile.am  README  autogen.sh  configure.in
tags/ktoblzcheck-1_7/ktoblzcheck/src/bankdata/: .cvsignore  bundesbank.sed.in  online_update.pl.in
tags/ktoblzcheck-1_7/ktoblzcheck/src/include/: Makefile.am
tags/ktoblzcheck-1_7/ktoblzcheck/src/lib/: iban_check.cc
tags/ktoblzcheck-1_8/ktoblzcheck/: ChangeLog  autogen.sh  ktoblzcheck.pc.in
tags/ktoblzcheck-1_8/ktoblzcheck/src/bankdata/: Makefile.am  online_update.pl.in
tags/ktoblzcheck-1_8/ktoblzcheck/src/include/: iban.h  ktoblzcheck.h
tags/ktoblzcheck-1_8/ktoblzcheck/src/lib/: .cvsignore
trunk/CVSROOT/: cvsignore  loginfo  syncmail
trunk/ktoblzcheck/: .cvsignore  AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  README.WIN32  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure.ac  configure.in  ktoblzcheck.iss.in  ktoblzcheck.spec.in
trunk/ktoblzcheck/doc/: mainpage.doxygen.in
trunk/ktoblzcheck/macros/: Makefile.am
trunk/ktoblzcheck/src/: Makefile.am
trunk/ktoblzcheck/src/bankdata/: .cvsignore  Makefile.am  bankdata.txt  bundesbank.pl.in  bundesbank.sed  online_update.pl.in
trunk/ktoblzcheck/src/include/: Makefile.am  iban.h  ktoblzcheck.h  ktoblzcheck.hh
trunk/ktoblzcheck/src/lib/: .cvsignore  Makefile.am  accnum.cc  algorithms.cc  algorithms.h  iban.cc  ktoblzcheck.cc  methods.cc
trunk/ktoblzcheck/src/python/: ktoblzcheck.py
