AC_INIT(src/lib/ktoblzcheck.cc)
AM_INIT_AUTOMAKE(KtoBlzCheck, 0.1)
AM_CONFIG_HEADER(config.h)


AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL


AC_MSG_CHECKING([whether the resource file should be compiled into the library])
AC_ARG_WITH(compile-into-lib,
        [  --with-compile-into-lib Should the resource file be compiled 
                                   into the library instead of manualy 
                                   reading it from your application],[
        COMPILETOLIB="$withval"
        COMPILETOLIB="$withval"
        ])

if test -z "$COMPILETOLIB"; then
	AC_MSG_RESULT([no, manualy read it in your application])
else
	AC_DEFINE(COMPILE_RESOURCE)
	define_compile_resource="#define COMPILE_RESOURCE"
	AC_SUBST(define_compile_resource)

	AC_MSG_RESULT([yes])
fi

AC_OUTPUT(Makefile src/Makefile src/bankdata/Makefile src/bin/Makefile src/lib/Makefile)
