# Installation of the data file

# Have this installed in $prefix/ktoblzcheck
idatadir = $(BANKDATA_PATH)
dist_idata_DATA = bankdata.txt

EXTRA_DIST= \
  bundesbank.sed

#all-local:
#	if test bankdata.txt -nt ../lib/data.cc; then \
#	sh transform.sh >../lib/data.cc; \
#	fi
# - moved to ../lib/Makefile.am
